[package]

name = "pwong"
version = "0.0.1"
authors = ["caiges <caige@fastmail.fm>"]

[lib]
name = "pwong"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
time = "*"
num = "*"
gl = "0.6.0"

[dependencies.sdl2]
version = "0.34.2"
default-features = false
features = ["ttf"]
